force-app/main/default/objects/Top_Caller__c/Top_Caller__c.object-meta.xml
<CustomObject>
    <label>Support Center Top Caller</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Top Caller Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Center Top Callers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>