force-app/main/default/objects/Top_Caller__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Top Caller Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Name</relationshipLabel>
    <relationshipName>Support_Center_Top_Callers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>