force-app/main/default/objects/Top_Caller__c/fields/Other_Resources_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Other_Resources_Utilized__c</fullName>
    <description>What resources has the customer utilized other than the support center?</description>
    <inlineHelpText>What resources has the customer utilized other than the support center?</inlineHelpText>
    <label>What resources has the customer utilized</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Person Training at the board office</fullName>
            </value>
            <value>
                <fullName>Online training Resources</fullName>
            </value>
            <value>
                <fullName>Self Help Tutorial Documents</fullName>
            </value>
            <value>
                <fullName>Built in/Hover Help within the products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>