force-app/main/default/objects/Top_Caller__c/fields/Reasons_Not_To_Use_Alternative_Resources__c.field-meta.xml
<CustomField>
    <fullName>Reasons_Not_To_Use_Alternative_Resources__c</fullName>
    <description>What are the reasons the customer does not use alternate resources?</description>
    <inlineHelpText>What are the reasons the customer does not use alternate resources?</inlineHelpText>
    <label>Reasons not to use alternative resources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>N/A customer use alternate resources</fullName>
            </value>
            <value>
                <fullName>Easier to call the Support Center</fullName>
            </value>
            <value>
                <fullName>Prefers 1-2-1 help vs Self Help</fullName>
            </value>
            <value>
                <fullName>Unaware of the Alternate resources</fullName>
            </value>
            <value>
                <fullName>Doesn’t have time to attend classes</fullName>
            </value>
            <value>
                <fullName>Classes locations are not convenient</fullName>
            </value>
            <value>
                <fullName>Classes are not relevant</fullName>
            </value>
            <value>
                <fullName>Online resources are hard to find</fullName>
            </value>
            <value>
                <fullName>Online resources too long to navigate</fullName>
            </value>
            <value>
                <fullName>Online resources don’t resolve my issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>