force-app/main/default/objects/Top_Caller__c/fields/Reasons_To_Choose_Support__c.field-meta.xml
<CustomField>
    <fullName>Reasons_To_Choose_Support__c</fullName>
    <description>What are the main reasons the customer chooses the support center as their go to resource?</description>
    <inlineHelpText>What are the main reasons the customer chooses the support center as their go to resource?</inlineHelpText>
    <label>Main reasons to choose support center</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Easier to call the Support Center</fullName>
            </value>
            <value>
                <fullName>Unaware of alternate resources</fullName>
            </value>
            <value>
                <fullName>Alternate resources don’t address issues</fullName>
            </value>
            <value>
                <fullName>A technical issue with MRIS products</fullName>
            </value>
            <value>
                <fullName>A technical issue with hardware/software</fullName>
            </value>
            <value>
                <fullName>A broken process with MRIS</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Faster</fullName>
            </value>
            <value>
                <fullName>Allows for a real-time dialog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>