force-app/main/default/objects/Top_Caller__c/fields/Resources_available__c.field-meta.xml
<CustomField>
    <fullName>Resources_available__c</fullName>
    <description>What resources is the customer aware of that may help solve their issues?</description>
    <inlineHelpText>What resources is the customer aware of that may help solve their issues?</inlineHelpText>
    <label>What resources is the customer aware of</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>In Person Training at the board office</fullName>
            </value>
            <value>
                <fullName>Online training Resources</fullName>
            </value>
            <value>
                <fullName>Self Help Tutorial Documents</fullName>
            </value>
            <value>
                <fullName>Built in/Hover Help within the products</fullName>
            </value>
            <value>
                <fullName>Email support</fullName>
            </value>
            <value>
                <fullName>On-line chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>