force-app/main/default/objects/Top_Caller__c/fields/Resources_Provided_By_CAM__c.field-meta.xml
<CustomField>
    <fullName>Resources_Provided_By_CAM__c</fullName>
    <description>What resources were provided by the CAM?</description>
    <inlineHelpText>What resources were provided by the CAM?</inlineHelpText>
    <label>What resources were provided by the CAM</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Introduced MRIS U and online resources</fullName>
            </value>
            <value>
                <fullName>Invited to upcoming training session.</fullName>
            </value>
            <value>
                <fullName>Scheduled an office visit</fullName>
            </value>
            <value>
                <fullName>Sent online resources via email</fullName>
            </value>
            <value>
                <fullName>Offered personal 1-2-1 support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>